<resources>
    <string name="app_name">Mail Client</string>
    <string name="splash_desc">Splashscreen image</string>


    <string name="pref_sync">pref_sync</string>
    <string name="pref_sync_sum"></string>
    <string name="pref_sync_title">Sync</string>
    <string name="pref_syncConnectionType">Refresh</string>
    <string name="pref_sync_list">pref_sync_list</string>
    <string name="sort_date">sort_date</string>
    <string name="pref_sort_by_date">Sort</string>
    <string name="pref_sort"></string>
    <string name="pref_sort_list">pref_sort_list</string>

    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="button">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="login_image">Login image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users_profile_picture">Users profile picture</string>
    <string name="users_fullname">%1$s %2$s</string>
    <string name="tags_placeholder">work</string>
    <string name="fullname_placeholder">John Doe</string>
    <string name="subject_placeholder">Subject</string>
    <string name="content_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nisi erat, aliquam quis purus ac, posuere venenatis sapien. Nullam vitae mollis magna, at posuere est.</string>
    <string name="filter">Filter</string>
    <string name="add_new_email">Add new email</string>
    <string name="profile">Profile</string>
    <string name="change_account">Change account</string>
    <string name="settings">Settings</string>
    <string name="folders">Folders</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="zero">0</string>
    <string name="folder_name_placeholder">Folder name</string>
    <string name="contacts">Contacts</string>
    <string name="emails">Emails</string>
    <string name="display_name_placeholder">John Doe</string>
    <string name="email_placeholder">john.doe@mail.com</string>
    <string name="add_contact">Add contact</string>
    <string name="folder_icon">Folder icon</string>
    <string name="add_folder">Create new folder</string>

    <string name="create_folder_name">Name</string>
    <string name="create_folder_text">Parent folder</string>

    <string name="folder_save_att">Save</string>
    <string name="folder_button_cancel">Cancel</string>
    <string name="first_contact">First</string>
    <string name="display_contact">Display</string>
    <string name="last_contact">Last</string>
    <string name="email_contact">Email</string>
    <string name="format_contact">Format</string>

    <string name="button_save_contact">Save</string>
    <string name="button_back_contact">Back</string>
    <string name="email_to">To:</string>
    <string name="email_cc">Cc:</string>
    <string name="email_bcc">Bcc:</string>
    <string name="email_datetime">Date:</string>
    <string name="email_subject">Subject:</string>
    <string name="email_content">Content:</string>
    <string name="email_button">Send</string>
    <string name="email_button_cancel">Cancel</string>
    <string name="email_tags">Tags:</string>
    <string name="title_activity_te">TeAct</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="folder_no_of_messages">Messages: %1$d</string>
    <string name="folder_no_of_files">Files: %1$d</string>
    <string name="folder_name_label">Folder name:</string>
    <string name="cant_get_folders">Can\'t fetch folders from server</string>
    <string name="no_receive_time">time not available</string>
    <string name="user_details_file_key">user_details</string>
    <string name="user_account_id">user_account_id</string>
    <string name="user_id">user_id</string>
    <string name="refreshError">There was an error when trying to refresh</string>
    <string name="create_error">There was an error while trying to create the resource</string>
    <string name="no_parent_folder">There is no parent folder</string>
    <string name="tag">Name</string>
    <string name="tag_save_att">Save</string>
    <string name="tag_button_cancel">Cancel</string>
    <string name="my_profile_picture">My profile picture</string>
    <string name="my_username">Username</string>
    <string name="my_password">Password</string>
    <string name="my_first_name">First name</string>
    <string name="my_last_name">Last name</string>
    <string name="button_logout">Logout</string>
    <string name="need_to_choose_an_account">You need to choose an account to be able to see its emails</string>
    <string name="toolbar_email_del">Delete</string>
    <string name="toolbar_email_repl_all">Replay All</string>
    <string name="toolbar_email_repl">Replay</string>
    <string name="toolbar_email_forw">Forward</string>
    <string name="button_save">Save</string>
    <string name="need_to_be_logged_in">You need to be logged in</string>
    <string name="add_contact_profile_picture">Selected profile picture</string>
    <string name="select_picture">Select image</string>
    <string name="cancel">Cancel</string>
    <string name="mail_required">Valid mail address is required</string>
    <string name="add_tag">Add tag</string>
    <string name="svi_tag">Tags</string>
    <string name="send_mail">Send email</string>
    <string name="add_attachment">Add attachment</string>
    <string name="attachments">Attachments:</string>
    <string name="john_doe">John Doe</string>
    <string name="file_placeholder">file.doc</string>
    <string name="message_saved_to_drafts">Message saved to drafts folder</string>
    <string name="failed_to_save_to_drafts">Failed to save to drafts</string>
    <string name="edit_folder">Edit folder</string>
    <string name="execute_rules_on_folder">Execute rules on folder</string>
    <string name="add_rule">Add rule</string>
    <string name="add">Add</string>
    <string name="rule_not_valid">New rule is not valid</string>
    <string name="condition">Condition:</string>
    <string name="value">Value:</string>
    <string name="operation">Operation:</string>
    <string name="destination">Destination:</string>
    <string name="from">From:</string>
    <string name="to">"To:"</string>
    <string name="email_attachments">Attachments:</string>
    <string name="email">Email</string>
    <string name="reply">Reply</string>
    <string name="reply_all">Reply all</string>
    <string name="forward">Forward</string>
    <string name="delete">Delete</string>
    <string name="edit_as_draft">Edit as draft</string>
    <string name="save_attachments">Save attachments</string>
    <string name="succesfully_saved_attachments">Sucessfully saved %1$s attachments</string>
    <string name="user_token">token</string>
    <string name="loggin_failed">Login failed</string>
    <string name="executing_rules">Executing rules</string>
    <string name="change_profile">Change account</string>
    <string name="add_profile">Add profile</string>
    <string name="incoming_mail_protocol">Incoming Mail Protocol</string>
    <string name="smtp_address">Smtp address</string>
    <string name="incoming_mail_address">Incoming mail adress</string>
    <string name="choose">Choose</string>
    <string name="register">Not a member, register?</string>
    <string name="registered">User registered</string>
    <string name="failed_to_register">Failed to register</string>
    <string name="filter_dialog_title">Filter emails</string>
    <string name="filter_dialog_hint">Enter search term</string>
    <string name="account_not_valid">Acount not valid, check your values</string>
    <string name="accaount_add_successful">Account added sucessfully</string>
    <string name="account_add_error">Failed to add new account</string>
    <string name="add_new_account">Add new account</string>
    <string name="select_account">Choose an account</string>
    <string name="change_account_error">Error while changing an account</string>
    <string name="account_change_success">Account changed successfully</string>
    <string name="error">Error</string>
    <string name="mesage_deleted">Message deleted</string>
    <string name="add_tag_dialog">Add tag</string>
    <string name="add_tag_dialog_chip">Add chip</string>
</resources>
