<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <PreferenceCategory
        android:title="Auto data sync"
        android:key="sync_settings">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_sync"
            android:summary="@string/pref_sync_sum"
            android:title="@string/pref_sync_title" />


        <ListPreference
            android:dependency="@string/pref_sync"
            android:dialogTitle="@string/pref_syncConnectionType"
            android:entries="@array/pref_syncConnectionTypes_entries"
            android:entryValues="@array/pref_syncConnectionTypes_values"
            android:key="@string/pref_sync_list"
            android:title="@string/pref_syncConnectionType"
            android:summary="%s"
            android:defaultValue="1"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_sort_by_date"
        android:key="@string/sort_date">

        <ListPreference
            android:dialogTitle="@string/pref_sort"
            android:entries="@array/pref_sort_by_date_entries"
            android:entryValues="@array/pref_sort_by_date_values"
            android:key="@string/pref_sort_list"
            android:title="@string/pref_sort"
            android:summary="%s"
            android:defaultValue="true"/>

    </PreferenceCategory>
</PreferenceScreen>
