<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/reply"
        android:icon="@drawable/ic_reply_white_24dp"
        android:title="@string/reply"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/reply_all"
    android:icon="@drawable/ic_reply_all_white_24dp"
    android:title="@string/reply_all"
    app:showAsAction="ifRoom"/>
    <item android:id="@+id/forward"
          android:icon="@drawable/ic_forward_white_24dp"
          android:title="@string/forward"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/save_attachments"
          android:icon="@drawable/ic_save_white_24dp"
          android:title="@string/save_attachments"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/delete"
          android:icon="@drawable/ic_delete_white_24dp"
          android:title="@string/delete"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/draft"
          android:title="@string/edit_as_draft"/>
    <item android:id="@+id/add_tag_menu_item"
          android:title="@string/add_tag"/>

</menu>