<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    tools:context=".activities.emailsActivity.EmailFragment"
    android:columnCount="2"
    android:rowCount="4"
    android:padding="8dp"
    android:elevation="10dp"
    android:background="@color/colorAccent"
    android:layout_marginBottom="4dp"
    android:layout_marginHorizontal="2dp"

    >


    <TextView
        android:id="@+id/textViewFullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="@string/fullname_placeholder" />

    <TextView
        android:id="@+id/textViewSubject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="@string/subject_placeholder" />

    <TextView
        android:id="@+id/textViewTags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnWeight="1"
        tools:text="@string/tags_placeholder" />

    <TextView
        android:id="@+id/textViewContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        tools:text="@string/content_placeholder" />
</GridLayout>