<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp">

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical">
    <ImageView
        android:id="@+id/imageViewMyProfilePic"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginEnd="4dp"
        android:layout_weight="1"
        android:contentDescription="@string/my_profile_picture"
        tools:src="@drawable/ic_launcher_foreground" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewMyUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/editUsernameMyUserName"
            android:text="@string/my_username" />
        <EditText
            android:id="@+id/editUsernameMyUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="40sp" />
        <TextView
            android:id="@+id/textViewMyPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/editPasswordMyPassword"
            android:text="@string/my_password" />

        <EditText
            android:id="@+id/editPasswordMyPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="40sp" />
        <TextView
            android:id="@+id/textViewMyFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/editUsernameMyFirstName"
            android:text="@string/my_first_name" />
        <EditText
            android:id="@+id/editUsernameMyFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="40sp" />
        <TextView
            android:id="@+id/textViewMyLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/editUsernameMyLastName"
            android:text="@string/my_last_name" />
        <EditText
            android:id="@+id/editUsernameMyLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_rule_button"
            android:text="@string/add_rule"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="40sp" />

    </LinearLayout>

</LinearLayout>
<com.google.android.material.navigation.NavigationView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:id="@+id/profile_nav_view"
    app:menu="@menu/navigation_drawer_menu"
    />

</androidx.drawerlayout.widget.DrawerLayout>