<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.contactsActivity.fragments.ContactFragment"
    android:orientation="horizontal"
    android:layout_marginTop="4dp"
    android:elevation="8dp"
    >


    <ImageView
        android:id="@+id/imageViewProfilePicture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_weight="1"
        android:contentDescription="@string/users_profile_picture"
        tools:src="@drawable/ic_launcher_foreground" />

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2"
            >

        <TextView
            android:id="@+id/textViewDisplayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            tools:text="@string/display_name_placeholder"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="@string/email_placeholder"
            android:layout_marginStart="8dp"
            />

        </LinearLayout>
</LinearLayout>