<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateContactActivity"
    android:orientation="horizontal"
    android:layout_marginHorizontal="@dimen/smallPadding"
    android:layout_marginTop="@dimen/smallPadding"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:id="@+id/content_linear_layout"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:id="@+id/image"
                android:contentDescription="@string/add_contact_profile_picture"
                />
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:gravity="center"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/textViewForFirstContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editFirstContact"
                    android:text="@string/first_contact" />

                <EditText
                    android:id="@+id/editFirstContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textViewLastContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editLastContact"
                    android:text="@string/last_contact" />

                <EditText
                    android:id="@+id/editLastContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName|text" />

                <TextView
                    android:id="@+id/textViewDisplayContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editDisplayContact"
                    android:text="@string/display_contact" />

                <EditText
                    android:id="@+id/editDisplayContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />


                <TextView
                    android:id="@+id/textViewEmailContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editEmailContact"
                    android:text="@string/email_contact" />

                <EditText
                    android:id="@+id/editEmailContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mail_required"
                    android:textColor="@color/red"
                    android:visibility="gone"
                    android:id="@+id/email_req_t_w"/>

                <TextView
                    android:id="@+id/textViewFormatContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editFormatContact"
                    android:text="@string/format_contact" />

                <EditText
                    android:id="@+id/editFormatContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleLarge"
            android:indeterminate="true"
            android:layout_gravity="center"
            android:id="@+id/progress_bar"
            android:visibility="gone"
            />

</LinearLayout>
</LinearLayout>